# unifac

./: .gitignore  .pre-commit-checks  .rusty-hook.toml  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: ci.yml
src/: calculator.rs  formula.rs  functional_group.rs  interaction.rs  lib.rs  mixture.rs  substance.rs
