[package]
name = "unifac"
version = "0.1.1"
authors = ["Mikel Muennekhoff <mmuennekhoff+github@gmail.com>", "Peter Heringer <heringer@protonmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Crate to calculate non-ideal vapor-liquid equilibria using UNIFAC model"
repository = "https://github.com/sarcaustech/unifac"
keywords = ["chemistry", "thermodynamics", "vle"]
categories = ["mathematics", "science", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rayon = "1.5"
itertools = "0.9.0"

[dev-dependencies]
rusty-hook = "^0.11.2"
